# web-benchmarks

./: .env.local.example  .gitignore  biome.json  bun.lockb  docker-compose.dev.yaml  docker-compose.yaml  package.json  turbo.json
framework-benchmarks/cs/: Directory.Build.props  Project.sln
framework-benchmarks/cs/apps/aspnetcore-dapper/: AspNetCoreDapper.csproj  package.json
framework-benchmarks/cs/apps/aspnetcore-ef/: package.json
framework-benchmarks/csharp/: Dockerfile  Project.sln
framework-benchmarks/csharp/apps/aspnetcore-ef/: AspNetCoreEf.csproj  AspNetCoreEf.http  package.json
framework-benchmarks/go/: Dockerfile  go.work  go.work.sum
framework-benchmarks/go/apps/echo-sql/: go.mod  package.json
framework-benchmarks/rs/: Dockerfile
framework-benchmarks/rs/apps/axum-sqlx/: Cargo.toml  package.json
framework-benchmarks/rust/: Cargo.toml
framework-benchmarks/rust/apps/axum-sqlx/: package.json
framework-benchmarks/rust/apps/axum-sqlx/src/: main.rs
framework-benchmarks/rust/cargo/: .config.toml
framework-benchmarks/ts/: Dockerfile  package.json
framework-benchmarks/ts/apps/hono-kysely/: build.ts  package.json  tsconfig.json
setup/database/: Dockerfile  package.json
setup/database-migrations/: Dockerfile  atlas.hcl  package.json  turbo.json
setup/database-migrations/src/migrations/: 20250107151745.sql  20250108120137.sql  atlas.sum
setup/database-seeder/: Dockerfile  build.ts  package.json  tsconfig.json
setup/database-seeder/src/: index.ts
setup/gateway/: Dockerfile  package.json
tests/ts/load-tests/: README.md  package.json
(+16 files in other folders)
